# Vision-encoder-based-Payload-State-Estimator

./: README.md
Controller/main_controller/: CMakeLists.txt  README.md  package.xml
Controller/main_controller/App/: realsenseRemap.cpp  visualiseBag.cpp  visualiseBag_Marker.cpp  visualiseBag_Path_part23.cpp  visualiseBag_Path_part3.cpp
Controller/main_controller/config/: default.yaml
Controller/main_controller/include/loadController/: common_include.h  flightController.h  math.h  node.h
Controller/main_controller/include/trajGenerator/: trajectory_generator_waypoint.h
Controller/main_controller/launch/: test.launch  vicon.launch
Controller/main_controller/launch/rviz_config/: test_traj_px4.rviz
Controller/main_controller/outputData/: fout_GroundTruth.txt  fout_nrsl_body.txt  part2.txt
Controller/main_controller/src/loadController/: flightController.cpp
Controller/main_controller/src/trajGenerator/: trajectory_generator_waypoint.cpp
Estimator/enocder_estimator/: CMakeLists.txt
Estimator/enocder_estimator/App/: encoder2Pose.cpp  main.cpp
Estimator/enocder_estimator/include/adcLoadEstimator/: node.h
Estimator/enocder_estimator/include/kf/: common_include.h  ekf.h  ground_truth_package.h  measurement_package.h
Estimator/enocder_estimator/launch/: gf.launch
Estimator/enocder_estimator/scripts/: test.py  watch.py
Estimator/enocder_estimator/src/: ekf.cpp  ukf.cpp
Estimator/vision_estimator/: CMakeLists.txt
Estimator/vision_estimator/include/: staple_tracker.hpp
Estimator/vision_estimator/src/: staple_tracker.cpp
Feedback/load_estimator/: package.xml
Feedback/load_estimator/App/: findPossible_D435.cpp  gaussianFusion.cpp  kf.cpp  main_EKF.cpp
Feedback/load_estimator/include/USB2XXX/: usb2adc.h
Feedback/load_estimator/include/adcLoadEstimator/: adc.h  common_include.h
Feedback/load_estimator/include/kf/: ukf.h
Feedback/load_estimator/launch/: fusion.launch
Feedback/vicon_bridge/launch/: vicon.launch
STAPLE/: package.xml
STAPLE/App/: tracker_encoder.cpp  tracker_encoder2Video.cpp  tracker_template.cpp
STAPLE/src/: tracker.cpp
Simulation/main_controller/: CMakeLists.txt  package.xml
Simulation/main_controller/App/: reduceError.cpp  showStatus.cpp  takeoff.cpp  test.cpp  viconRemap.cpp  visualiseBag2txt.cpp  visualiseBag_Path.cpp
Simulation/main_controller/config/: .default.yaml.swp  confiig_example.cpp
Simulation/main_controller/include/loadController/: dataStructure.h  flightController.h
Simulation/main_controller/launch/: MoCapTest.launch  setpoint.launch  t265.launch
Simulation/main_controller/launch/rviz_config/: test_traj.rviz
Simulation/main_controller/outputData/: fout_Encoder.txt  fout_Vision.txt
Simulation/main_controller/src/loadController/: flightController.cpp  math.cpp
Simulation/scenes/: quadcopter.ttt  quadcopter_with_payload.ttt
img_extract/: CMakeLists.txt  caliberation_result1.txt  package.xml
img_extract/src/: fisheye_calibration.cpp  fisheye_undistort.cpp  fisheye_undistort_node.cpp  fisheye_undistort_node_sub.cpp  img_catcher.cpp  img_extract.cpp
